# ai-quiz-app

backend/: database.db  pyproject.toml
backend/src/: ai_generator.py  app.py  utils.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py  webhooks.py
frontend/: IIFE_NOTES.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/auth/: AuthenticationPage.tsx  ClerkProviderWithRoutes.tsx
frontend/src/challenge/: ChallengeGenerator.tsx  MCQChallenge.tsx
frontend/src/history/: HistoryPanel.tsx
frontend/src/layout/: Layout.tsx
frontend/src/utils/: api.ts
