[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "clerk-backend-api>=4.2.0",
    "fastapi>=0.124.2",
    "google-generativeai>=0.8.6",
    "openai>=2.11.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "svix>=1.83.0",
    "uvicorn>=0.38.0",
]
